# calculatorProject

./: .gitignore  CMakeLists.txt  calculations.c  calculations.h  errorHandler.c  errorHandler.h  libraries.h  main.c
GUI/: GUI.c  GUI.h
complex math/: calculations.c  calculations.h
maps/: hashing.c  hashing.h  mapComplex.c  mapComplex.h  mapFunctions.c  mapFunctions.h
stacks/: stackComplex.c  stackComplex.h  stackOperator.c  stackOperator.h  stackVariable.c  stackVariable.h
